--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,13 @@
     },
     "baseUrl": "src"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/landing-page/components/Footer",
+    "postcss.config.mjs"
+  ],
   "exclude": ["node_modules"]
 }
