--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "classnames": "^2.5.1",
     "contentful": "^11.5.13",
     "date-fns": "^4.1.0",
