--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cf-export": "contentful space export --config src/app/contentful/export-config.json --management-token $CONTENTFUL_ACCESS_TOKEN --space-id $CONTENTFUL_SPACE_ID",
+    "cf-generate-types": "cf-content-types-generator src/app/contentful/export.json --out lib/types/contentful"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
     "@heroicons/react": "^2.2.0",
     "classnames": "^2.5.1",
-    "contentful": "^11.5.13",
+    "contentful": "^11.5.14",
     "date-fns": "^4.1.0",
     "next": "15.3.0",
     "react": "^19.0.0",
