--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "classnames": "^2.5.1",
     "contentful": "^11.5.14",
