--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
