--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^16.0.1",
-    "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "cf-content-types-generator": "^2.16.0",
     "classnames": "^2.5.1",
@@ -20,6 +19,7 @@
     "date-fns": "^4.1.0",
     "next": "15.3.0",
     "nodemailer": "^7.0.3",
+    "radix-ui": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
