--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@heroicons/react": "^2.2.0",
+    "@vercel/speed-insights": "^1.2.0",
     "cf-content-types-generator": "^2.16.0",
     "classnames": "^2.5.1",
     "contentful": "^11.5.14",
