--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "contentful": "^11.5.14",
     "date-fns": "^4.1.0",
+    "keen-slider": "^6.8.6",
     "next": "15.3.0",
     "nodemailer": "^7.0.3",
     "radix-ui": "^1.4.1",
