--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.3.0"
+    "react-vertical-timeline-component": "^3.5.3",
+    "tailwind-merge": "^3.3.0",
+    "yet-another-react-lightbox": "^3.23.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -35,6 +37,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
