--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "contentful": "^11.5.14",
     "framer-motion": "^12.15.0",
     "keen-slider": "^6.8.6",
-    "next": "15.3.0",
+    "next": "^15.5.6",
     "nodemailer": "^7.0.3",
     "radix-ui": "^1.4.1",
     "react": "^19.0.0",
@@ -42,6 +42,6 @@
     "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
