--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "contentful": "^11.5.14",
     "framer-motion": "^12.15.0",
+    "googleapis": "^164.0.0",
     "keen-slider": "^6.8.6",
     "next": "^15.5.6",
     "nodemailer": "^7.0.3",
